# rusty-bc250-atx

./: .gitignore  AGENTS.md  BOM.md  CIRCUIT.md  Cargo.toml  LICENSE-MIT  PINMAP.md  README.md
.cargo/: config.toml
pcb_3dprint/: pcb.scad  pcb.stl  support.scad  support.stl
sch/rusty-bc250-atx/: rusty-bc250-atx.kicad_pcb  rusty-bc250-atx.kicad_prl  rusty-bc250-atx.kicad_pro  rusty-bc250-atx.kicad_sch
src/: button.rs  led.rs  main.rs  power.rs
