[package]
name = "ch32-bc250-atx"
version = "0.1.0"
authors = ["Homin Lee <i@homin.dev>"]
edition = "2024"
license = "MIT"

[[bin]]
name = "ch32-bc250-atx"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[dependencies]
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal.git", features = [
    "ch32v003f4u6",
    "embassy",
    "time-driver-tim2",
    "rt",
    "memory-x",
] }
embassy-executor = { version = "0.9.1", features = [
    "arch-spin",
    "executor-thread"
] }
embassy-time = { version = "0.5.0" }
qingke-rt = "0.6.1"
qingke = "0.6.1"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"

[profile.dev]
opt-level = 's'

[profile.release]
strip = false     # symbols are not flashed to the microcontroller, so don't strip them.
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
